tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_struct_numeric_generic_in_function/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: N has a type of Foo. The only supported numeric generic types are `u1`, `u8`, `u16`, and `u32`.
  ┌─ src/main.nr:6:20
  │
6 │     pub fn bar<let N: Foo>() {
  │                    - Unsupported numeric generic type
  │

Aborting due to 1 previous error
